# cookiecutter-comfy-extension

./: .gitignore  .gitmodules  LICENSE  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: build-pipeline.yml
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_name}}/: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: build-pipeline.yml
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/: __init__.py  nodes.py
{{cookiecutter.project_name}}/tests/: pytest.ini  test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  MANIFEST.in  README.md  __init__.py  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: build-pipeline.yml  publish_node.yml
{{cookiecutter.project_slug}}/common/: LICENSE  pyproject.toml
{{cookiecutter.project_slug}}/custom-nodes-template/: MANIFEST.in  README.md  __init__.py
{{cookiecutter.project_slug}}/custom-nodes-template/.github/workflows/: build-pipeline.yml  publish_node.yml
{{cookiecutter.project_slug}}/custom-nodes-template/src/{{cookiecutter.project_slug}}/: nodes.py
{{cookiecutter.project_slug}}/react-extension-template/: README.md  __init__.py  package-lock.json
{{cookiecutter.project_slug}}/react-extension-template/.github/workflows/: publish.yml
{{cookiecutter.project_slug}}/react-extension-template/locales/en/: main.json
{{cookiecutter.project_slug}}/react-extension-template/locales/zh/: main.json
{{cookiecutter.project_slug}}/react-extension-template/ui/: .eslintrc.json  .prettierrc  eslint.config.js  jest.config.js  jest.setup.js  package.json  tsconfig.json  vite.config.js  vite.config.ts
{{cookiecutter.project_slug}}/react-extension-template/ui/locales/en/: main.json
{{cookiecutter.project_slug}}/react-extension-template/ui/locales/zh/: main.json
{{cookiecutter.project_slug}}/react-extension-template/ui/public/locales/en/: main.json
{{cookiecutter.project_slug}}/react-extension-template/ui/public/locales/zh/: main.json
{{cookiecutter.project_slug}}/react-extension-template/ui/src/: App.css  App.tsx  index.css  main.tsx  setupTests.ts  vite-env.d.ts
{{cookiecutter.project_slug}}/react-extension-template/ui/src/__tests__/: dummy.test.tsx
{{cookiecutter.project_slug}}/react-extension-template/ui/src/utils/: i18n.ts
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  nodes.py  {{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/web/js/: example.js
