[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name="cookiecutter-comfy-extension"
authors = [
    {name = "Max Klein", email = "telamonian@hotmail.com.com"}
]
version="0.0.1"
description="Cookiecutter template for a Python package"
license="BSD"
keywords=["cookiecutter", "template", "package"]
requires-python=">=3.8"
classifiers = [
]
dependencies = [
    "cookiecutter~=2.6.0"
]

[project.optional-dependencies]
dev = [
    "bump-my-version",
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff",  # linting
]

[project.urls]
bugs = "https://github.com/telamonian/cookiecutter-comfy-extension/issues"
homepage = "https://github.com/telamonian/cookiecutter-comfy-extension"

[tool.pytest.ini_options]
minversion = "6.0"
# addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.ruff]
# extend-exclude = ["static", "ci/templates"]
line-length = 140
src = ["src", "tests"]
target-version = "py39"
exclude = ["*cookiecutter.project_slug*"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
